objects/Restricted_MtM__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Restrictions on this Account</relationshipLabel>
        <relationshipName>Restrictions_MtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Restrictions on this Contact</relationshipLabel>
        <relationshipName>Restrictions_MtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RNI_AM_Restriction__c</fullName>
        <formula>IF( 
AND( ISPICKVAL( Restriction__r.Category__c , &quot;Restricted: Permission Required&quot;) ,
 
OR( 
ISPICKVAL( Restriction__r.Source_Department__c , &quot;EA&quot;), 
ISPICKVAL( Restriction__r.Source_Department__c , &quot;AE&quot;), 
ISPICKVAL( Restriction__r.Source_Department__c , &quot;Chairman&apos;s Team&quot;), 
ISPICKVAL( Restriction__r.Source_Department__c , &quot;RI Growth Accounts&quot;) 
)
), 
1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RNI AM Restriction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restriction_Expiration_Date__c</fullName>
        <formula>Restriction__r.Expiration_Date__c</formula>
        <label>Restriction Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restriction_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restriction Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restriction_Owner__c</fullName>
        <formula>Restriction__r.Owner_Details__r.FirstName + &quot; &quot; +  Restriction__r.Owner_Details__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restriction Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction_Status__c</fullName>
        <formula>Restriction__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restriction Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction_Subject__c</fullName>
        <formula>Restriction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restriction Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Restriction</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Restrictions__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Restrictions__c</referenceTo>
        <relationshipLabel>Accounts and Contacts on this Restriction</relationshipLabel>
        <relationshipName>Restrictions_MtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Restrictions MtM</label>
    <nameField>
        <displayFormat>X{000}</displayFormat>
        <label>Restriction System ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restrictions MtM</pluralLabel>
    <recordTypes>
        <fullName>Account_Restriction</fullName>
        <active>true</active>
        <label>Account Restriction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Restriction</fullName>
        <active>true</active>
        <label>Contact Restriction</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_or_Contact_is_Required</fullName>
        <active>true</active>
        <description>Account or Contact is required to save a Restriction MtM.</description>
        <errorConditionFormula>ISBLANK( Account__c ) &amp;&amp;  ISBLANK( Contact__c )</errorConditionFormula>
        <errorMessage>Account or Contact must be populated.  Contact SalesforceHelp@advisory.com if you need assistance deleting a Restriction MtM record.</errorMessage>
    </validationRules>
</CustomObject>